--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^7.0.1",
-    "sass-loader": "^12.4.0"
+    "sass": "^1.49.0",
+    "sass-loader": "^10.1.1"
   },
   "eslintConfig": {
     "root": true,
