--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fab",
+  "name": "foxartbox",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
