--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"core-js": "^3.6.5",
 		"vue": "^3.0.0",
 		"vue-meta": "^2.4.0",
+		"vue-owl-carousel": "^2.0.3",
 		"vue-router": "^4.0.13"
 	},
 	"devDependencies": {
