--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"vue": "^3.0.0",
 		"vue-meta": "^2.4.0",
 		"vue-owl-carousel": "^2.0.3",
-		"vue-router": "^4.0.13"
+		"vue-router": "^4.0.13",
+		"vue3-carousel": "^0.2.9"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
